--- a/templates/users/detail.html
+++ b/templates/users/detail.html
@@ -3,7 +3,11 @@
 {% block content %}
 
 <div id="warbler-hero"
-     class="full-width">
+     class="full-width"
+     >
+  <img src="{{ user.header_image_url }}" alt="{{ user.username }}" 
+  style="max-height: 100%; width: 100%"/>
+  <!-- TODO: fix this CSS header image -->
 </div>
 <img src="{{ user.image_url }}"
      alt="Image for {{ user.username }}"
@@ -80,10 +84,18 @@
 <div class="row">
   <div class="col-sm-3">
     <h4 id="sidebar-username">@{{ user.username }}</h4>
-    <p>BIO HERE</p>
+    {% if user.bio %}
+      {{ user.bio }}
+    {% else %}
+      <span>This user does not have a bio.</span>
+    {% endif %}
     <p class="user-location">
       <span class="bi bi-map"></span>
-      LOCATION HERE
+      {% if user.location %}
+        {{ user.location }}
+      {% else %}
+        <span>Nowheresveille, USA</span>
+      {% endif %}
     </p>
   </div>
 
