--- a/templates/users/followers.html
+++ b/templates/users/followers.html
@@ -36,7 +36,9 @@
             {% endif %}
 
           </div>
-          <p class="card-bio">BIO HERE</p>
+          <p class="card-bio">
+            {{ follower.bio }}
+          </p>
         </div>
       </div>
     </div>
