fixed header image

--- a/templates/users/detail.html
+++ b/templates/users/detail.html
@@ -6,7 +6,7 @@
      class="full-width"
      >
   <img src="{{ user.header_image_url }}" alt="{{ user.username }}" 
-  style="max-height: 100%; width: 100%"/>
+  style="height: 100%; width: 100%"/>
   <!-- TODO: fix this CSS header image -->
 </div>
 <img src="{{ user.image_url }}"
