--- a/templates/users/show.html
+++ b/templates/users/show.html
@@ -3,10 +3,10 @@
 <div class="col-sm-6">
   <ul class="list-group" id="messages">
 
-    {% for message in user.messages %}
+    {% for msg in user.messages %}
 
     <li class="list-group-item">
-      <a href="/messages/{{ message.id }}" class="message-link"></a>
+      <a href="/messages/{{ msg.id }}" class="message-link"></a>
 
       <a href="/users/{{ user.id }}">
         <img src="{{ user.image_url }}"
@@ -17,11 +17,13 @@
       <div class="message-area">
         <a href="/users/{{ user.id }}">@{{ user.username }}</a>
         <span class="text-muted">
-              {{ message.timestamp.strftime('%d %B %Y') }}
+              {{ msg.timestamp.strftime('%d %B %Y') }}
             </span>
-        <p>{{ message.text }}</p>
+        <p>{{ msg.text }}</p>
       </div>
     </li>
+
+    {% include 'star_form.html' %}
 
     {% endfor %}
 
