--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -29,6 +29,7 @@ body.error-404 {
 .star {
   display: inline;
   z-index: 1000;
+  /* Place star inside of white box */
 }
 
 /* ======================= Nav */
