--- a/templates/users/show.html
+++ b/templates/users/show.html
@@ -22,8 +22,16 @@
         <p>{{ msg.text }}</p>
       </div>
     </li>
-
-    {% include 'star_form.html' %}
+    {% if msg.user != g.user %}
+      {% if g.csrf_form %}
+          <form action="/likes/{{ msg.id }}/add" method="POST" class="star">
+            {{ g.csrf_form.hidden_tag() }}
+            <button type="submit" class="btn btn-link">
+              <i class="bi bi-hand-thumbs-up{{ '-fill' if msg in g.user.messages_liked else ''}}"></i>
+            </button>
+          </form>
+        {% endif %}
+      {% endif %}
 
     {% endfor %}
 
