--- a/static/stylesheets/style.css
+++ b/static/stylesheets/style.css
@@ -216,6 +216,13 @@ nav + .container {
   background-position: top center;
 }
 
+#warbler-hero > img {
+  width: 100%;
+  max-height: 100%;
+  object-fit: cover;
+  object-position: 50% top;
+}
+
 .full-width {
   width: 100vw;
   margin: 0 -50vw;
